Bug 44147 - inserted calcs in writer accept no more input
Summary: inserted calcs in writer accept no more input
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.0 Beta3
Hardware: x86-64 (AMD64) Linux (All)
: highest blocker
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.5
Keywords:
Depends on:
Blocks: mab3.5
  Show dependency treegraph
 
Reported: 2011-12-26 00:43 UTC by gerdl
Modified: 2012-01-13 13:41 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
odt-sheet with embedded calc (13.45 KB, application/vnd.oasis.opendocument.text)
2011-12-26 00:43 UTC, gerdl
Details

Note You need to log in before you can comment on or make changes to this bug.
Description gerdl 2011-12-26 00:43:32 UTC
Created attachment 54818 [details]
odt-sheet with embedded calc

open the appended writer-sheet.
click into the embedded calc-sheet.
try to input an number in one of the cells.
Normally the input is accepted, in this case no change.
tested with version 3.5 beta from daily 2011-12-25-20-32-07
win win7 64
Comment 1 gerdl 2011-12-26 07:56:24 UTC
seems to depend upon formatting:
format all to number: the input appears.
perhaps "standard" input is undefined??
Comment 2 Zach 2011-12-28 10:46:26 UTC
Happening in LODev 3.5.0 beta2. However, if I do ctrl-A, right click to format, and format all as any number format, it works.
Comment 3 Petr Mladek 2012-01-05 02:41:02 UTC
I see this also on Linux with 3.5.0-beta2-x86_64 build.

To be more precise. I could write a text into a cell but when I press enter, the text disappear.

I am not sure of the bug is in Writer or Calc => I rather add both experts into CC. Also I am going to add this to most annoying bugs.
Comment 4 Rainer Bielefeld Retired 2012-01-09 09:45:36 UTC
[Reproducible] with reporter's sample and own sample documents and Parallel Dev-Installation of  "LibreOffice 3.5.0 Beta2- WIN7 Home Premium (64bit) German UI [Build-ID : 8589e48-760cc4d-f39cf3d-1b2857e-60db978]. 

Even a CALC object created in WRITER by 'copy/paste special - calc' from a CALC will loose it's contents integrity when you try to edit it.

I can confirm observation that changing cell format from "Standard" to something explicit seems to heal the problem.

There are lots of strange effects trying to edit CALC OLE objects, because it's easy to reproduce I will not repeat all observations.

I also tested WRITER and DRAW OLE objects in CALC, no problem.


Problem also visible with CALC objects in DRAW, currently I see this as a CALC problem (further investigations might lead to a different result).

@Kohei:
Please feel free to reassign (or reset Assignee to default) if it’s not your area or if provided information is not sufficient. Please set Status to ASSIGNED if you accept this Bug.
Comment 5 Rainer Bielefeld Retired 2012-01-09 11:22:46 UTC
[Reproducible] with Server installation of MSVC Master "LibO-dev 3.5.0 – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 485138f-e92bf75-4c1bcb5]" Win-x86@6 – 2011-12-06_21:37:02)

Ir seems prolbem began somehwere between 11-11-28 and 2011-12-06

Worked fine with Server installation of MSVC Master "LibO-dev 3.5.0 – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: a653e50-1f92ab1-3bd0388]" Win-x86@6  - 111128)
Comment 6 Kohei Yoshida 2012-01-10 18:10:38 UTC
I'll take a look.
Comment 7 Kohei Yoshida 2012-01-10 19:21:02 UTC
I got it.  Fixing the pagination in print preview and syncing selected sheets before and after the print preview ended up affecting this functionality.  Very interesting.
Comment 8 Kohei Yoshida 2012-01-10 19:34:48 UTC
Fixed on libreoffice-3-5 and master.

http://cgit.freedesktop.org/libreoffice/core/commit/?h=libreoffice-3-5&id=a78260fb65c2542566215bb5bdd6060c164584ab

The fix will be in RC1.
Comment 9 Felice 2012-01-13 04:15:44 UTC
Version LOdev 3.5 beta3
S.O. Ubuntu 10.04 and Debian Testing.
Leaflet 'writer' with inserted OLE object (Calc).
Opens the object Calc to modify the cells.
No change is possible because the sheet Calc is protected.
Even if 'format cells' eliminates the tick on 'protection' remains the fact
that it is impossible to modify any cell. In my similar models very old (made
with OOo 2.x in years 2003, 2004 or 2005) the elimination of protection works
very well and the cells are modified and saved correctly.
Comment 10 Jean-Baptiste Faure 2012-01-13 04:56:33 UTC
@Felice: please, read more carefully what it written at the end of comment #8. The fix will be in RC1, it is not in beta-3.
I tested on my own build of LO 3.5.0 beta3+ and it works as expected.
Setting to fixed back.

Best regards. JBF
Comment 11 Felice 2012-01-13 13:41:54 UTC
(In reply to comment #10)
> @Felice: please, read more carefully what it written at the end of comment #8.
> The fix will be in RC1, it is not in beta-3.
> I tested on my own build of LO 3.5.0 beta3+ and it works as expected.
> Setting to fixed back.
> 
> Best regards. JBF

@Jean-Baptiste
thanks and sorry for the distraction, greetings ... Felice