sc/source/ui/view/viewdata.cxx
@@ -323,6 +323,7 @@ ScViewData::ScViewData( ScDocShell* pDocSh, ScTabViewShell* pViewSh ) :
         bPagebreak  ( false ),
         bSelCtrlMouseClick( false )
 {
+    mpMarkData->SelectOneTable(0); // Sync with nTabNo.
 
     SetGridMode     ( sal_True );
     SetSyntaxMode   ( false );
@@ -369,6 +370,7 @@ ScViewData::ScViewData( ScDocShell* pDocSh, ScTabViewShell* pViewSh ) :
 
 ScViewData::ScViewData( const ScViewData& rViewData ) :
         maTabData( rViewData.maTabData ),
+        mpMarkData(new ScMarkData(*rViewData.mpMarkData)),
         pDocShell   ( rViewData.pDocShell ),
         pDoc        ( rViewData.pDoc ),
         pView       ( rViewData.pView ),
